<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/player_name_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="2"
        android:text="@string/player"
        android:textColor="@color/colorAccent"
        android:textSize="16sp">

    </TextView>


    <TextView
        android:id="@+id/games_won_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/games_won"
        android:textColor="@color/colorAccent"
        android:textSize="16sp">

    </TextView>

    <TextView
        android:id="@+id/games_lost_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/games_lost"
        android:textColor="@color/colorAccent"
        android:textSize="16sp">

    </TextView>

    <TextView
        android:id="@+id/win_loss_ratio_ratio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/win_percent"
        android:textColor="@color/colorAccent"
        android:textSize="16sp">

    </TextView>


    <TextView
        android:id="@+id/goals_scored_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/goals_scored"
        android:textColor="@color/colorAccent"
        android:textSize="16sp">

    </TextView>

    <TextView
        android:id="@+id/goals_against_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/goals_allowed"
        android:textColor="@color/colorAccent"
        android:textSize="16sp">

    </TextView>

    <TextView
        android:id="@+id/plus_minus_goals_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/goals_dif"
        android:textColor="@color/colorAccent"
        android:textSize="16sp">

    </TextView>

</LinearLayout>